fix: fixed stylings on mobile verison of blog page

--- a/src/components/blog/blogPostList/item.module.css
+++ b/src/components/blog/blogPostList/item.module.css
@@ -32,3 +32,9 @@
   line-height: 19px;
   margin-top: 5px;
 }
+
+@media only screen and (max-width: 767px) {
+  .container {
+    margin: 40px 0;
+  }
+}
